--- a/index.html
+++ b/index.html
@@ -49,15 +49,14 @@
   <!-- ✅ footer placeholder -->
   <div data-include="footer"></div>
 
+  <!-- ✅ header/footer 자동 include + 프로젝트 불러오기 -->
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
 
-    // ✅ header/footer 자동 삽입
     injectLayout({ active:'home' });
 
     const $grid = document.getElementById('projects-grid');
-
     function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
 
     async function render(){
@@ -69,7 +68,7 @@
         }
         $grid.innerHTML = list.map(p => `
           <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
-            <img src="${(p.representativeImageUrl || p.coverUrl || (Array.isArray(p.images)&&p.images[0]) || 'img/placeholder.svg')}" alt=""/>
+            <img src="${p.representativeImageUrl || p.coverUrl || (Array.isArray(p.images)&&p.images[0]) || 'img/placeholder.svg'}" alt=""/>
             <h3>${p.name ?? '(이름 없음)'}</h3>
             <div class="muted">${p.summary ?? ''}</div>
             <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
@@ -80,7 +79,6 @@
         $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
-
     render();
   </script>
 </body>
