--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
   </style>
 </head>
 <body>
-  <!-- ✅ header placeholder -->
   <div data-include="header"></div>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section class="hero">
     <h1>법인 없는 첫 후원 플랫폼</h1>
     <p>현재 <strong>Beta 서비스</strong>입니다.<br/>
@@ -38,7 +37,7 @@
     <a href="create.html" class="btn secondary">등록하기</a>
   </section>
 
-  <!-- Projects Section -->
+  <!-- Projects -->
   <section class="projects">
     <h2>진행 중인 프로젝트</h2>
     <div id="projects-grid" class="grid">
@@ -46,10 +45,8 @@
     </div>
   </section>
 
-  <!-- ✅ footer placeholder -->
   <div data-include="footer"></div>
 
-  <!-- ✅ header/footer 자동 include + 프로젝트 불러오기 -->
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
@@ -57,10 +54,20 @@
     injectLayout({ active:'home' });
 
     const $grid = document.getElementById('projects-grid');
-    function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
+    const fmt = n => Number(n||0).toLocaleString('ko-KR');
+
+    // 공통 커버 선택 체인
+    const cover = (p) =>
+      p.representativeImageUrl ||
+      p.coverUrl ||
+      (Array.isArray(p.galleryUrls) && p.galleryUrls[0]) ||
+      (Array.isArray(p.images) && p.images[0]) ||
+      p.image || p.thumbnailUrl ||
+      'img/placeholder.svg';
 
     async function render(){
       try {
+        // 홈은 승인된 프로젝트 위주 노출 (원하면 'all'로 바꿔도 됨)
         const list = await apiListProjects({ status:'approved', limit:12 });
         if(!list.length){
           $grid.innerHTML = '<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
@@ -68,7 +75,7 @@
         }
         $grid.innerHTML = list.map(p => `
           <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
-            <img src="${p.representativeImageUrl || p.coverUrl || (Array.isArray(p.images)&&p.images[0]) || 'img/placeholder.svg'}" alt=""/>
+            <img src="${cover(p)}" alt=""/>
             <h3>${p.name ?? '(이름 없음)'}</h3>
             <div class="muted">${p.summary ?? ''}</div>
             <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
@@ -79,6 +86,7 @@
         $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
+
     render();
   </script>
 </body>
