--- a/project.html
+++ b/project.html
@@ -3,40 +3,40 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>프로젝트 목록</title>
+<title>프로젝트 상세</title>
 <link rel="stylesheet" href="common.css"/>
 <link rel="stylesheet" href="app.min.css"/>
 <style>
-  .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px}
-  .card{border:1px solid #e5e7eb;border-radius:16px;overflow:hidden;background:#fff}
-  .card img{width:100%;height:180px;object-fit:cover}
-  .card-body{padding:14px;display:flex;flex-direction:column;gap:8px}
-  .chip{display:inline-block;padding:2px 10px;border-radius:999px;font-size:.8rem;border:1px solid #e5e7eb;color:#374151}
-  .chip.approved{background:#ecfdf5;border-color:#bbf7d0;color:#065f46}
-  .chip.pending{background:#fff7ed;border-color:#fed7aa;color:#9a3412}
+  .wrap{max-width:860px;margin:0 auto;padding:20px 16px}
+  h1{font-size:1.5rem;font-weight:800;margin-bottom:6px}
+  .muted{color:#6b7280;font-size:.9rem}
+  .kv{width:100%;border-radius:12px;margin:16px 0}
+  .slider{position:relative;overflow:hidden;border-radius:12px;margin:20px 0}
+  .slider img{width:100%;display:none}
+  .slider img.active{display:block}
+  .slider-nav{position:absolute;top:50%;width:100%;display:flex;justify-content:space-between;transform:translateY(-50%)}
+  .slider-nav button{background:rgba(0,0,0,.5);color:#fff;border:none;padding:6px 10px;border-radius:6px;cursor:pointer}
+  .btn.kakao{background:#FEE500;color:#111;padding:12px 20px;border-radius:12px;display:inline-block;font-weight:600;margin-top:16px}
 </style>
 </head>
 <body>
   <div data-include="header"></div>
 
-  <main class="container" style="padding:24px 16px">
-    <h1 style="margin:0 0 10px">프로젝트</h1>
-    <input id="q" placeholder="검색" style="padding:10px;border:1px solid #e5e7eb;border-radius:10px;width:100%;max-width:360px"/>
-    <div id="list" class="cards" style="margin-top:14px"></div>
+  <main class="wrap">
+    <div id="project-detail"><div class="muted">불러오는 중...</div></div>
   </main>
 
   <div data-include="footer"></div>
 
   <script type="module">
     import { injectLayout } from './js/include.js';
-    import { apiListProjects } from './js/api.js';
+    import { getProjectById } from './js/api.js';
 
-    injectLayout({ active:'list' });
+    injectLayout({ active:'project' });
 
-    const $q = document.getElementById('q');
-    const $list = document.getElementById('list');
+    const $detail = document.getElementById('project-detail');
+    const fmt = n => Number(n||0).toLocaleString('ko-KR');
 
-    // 공통 커버 선택 체인
     const cover = (p) =>
       p.representativeImageUrl ||
       p.coverUrl ||
@@ -45,49 +45,89 @@
       p.image || p.thumbnailUrl ||
       'img/placeholder.svg';
 
-    function match(p, q){
-      if(!q) return true;
-      const hay = [p.name, p.summary, p.description, p.rescuerName]
-        .map(x => (x||'')+'').join(' ').toLowerCase();
-      return hay.includes(q.toLowerCase());
+    function getId(){
+      return new URLSearchParams(location.search).get("id");
     }
 
-    const fmt = n => Number(n||0).toLocaleString('ko-KR');
+    function uniq(arr){
+      const seen = new Set();
+      return arr.filter(x => {
+        if(!x) return false;
+        if(seen.has(x)) return false;
+        seen.add(x);
+        return true;
+      });
+    }
+
+    function buildImages(p){
+      const imgs = [
+        cover(p),
+        ...(Array.isArray(p.galleryUrls) ? p.galleryUrls : []),
+        ...(Array.isArray(p.images) ? p.images : [])
+      ];
+      return uniq(imgs);
+    }
+
+    function renderSlider(imgs){
+      if(!imgs || !imgs.length) return '';
+      if(imgs.length === 1){
+        return `<img class="kv" src="${imgs[0]}" alt="project image"/>`;
+      }
+      return `
+        <div class="slider">
+          ${imgs.map((u,i)=>`<img src="${u}" class="${i===0?'active':''}" alt="gallery ${i+1}"/>`).join('')}
+          <div class="slider-nav">
+            <button id="prevBtn">◀</button>
+            <button id="nextBtn">▶</button>
+          </div>
+        </div>
+      `;
+    }
 
     async function render(){
+      const id = getId();
+      if(!id){
+        $detail.innerHTML = '<div class="muted">잘못된 접근입니다.</div>';
+        return;
+      }
       try{
-        // 목록은 기존 데이터까지 다 보이도록 'all'
-        const all = await apiListProjects({ status:'all' });
-        const list = all.filter(p => match(p, $q.value.trim()));
-
-        if(!list.length){
-          $list.innerHTML = '<div class="muted">결과 없음</div>';
+        const p = await getProjectById(id);
+        if(!p){
+          $detail.innerHTML = '<div class="muted">존재하지 않는 프로젝트입니다.</div>';
           return;
         }
 
-        $list.innerHTML = list.map(p => `
-          <article class="card">
-            <img src="${cover(p)}" alt="cover"/>
-            <div class="card-body">
-              <div style="display:flex;justify-content:space-between;align-items:center;gap:8px">
-                <strong>${p.name ?? '(이름 없음)'}</strong>
-                ${p.adminApproved ? '<span class="chip approved">승인</span>' : '<span class="chip pending">대기</span>'}
-              </div>
-              <div class="muted">${p.summary ?? ''}</div>
-              <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
-              <div style="text-align:right">
-                <a class="btn primary" style="padding:8px 12px;border-radius:10px" href="project.html?id=${encodeURIComponent(p.id)}">상세보기</a>
-              </div>
-            </div>
-          </article>
-        `).join('');
+        const imgs = buildImages(p);
+
+        $detail.innerHTML = `
+          <h1>${p.name ?? '(이름 없음)'}</h1>
+          <div class="muted">구조자: ${p.rescuerName ?? ''}</div>
+
+          ${renderSlider(imgs)}
+
+          <p>${p.description ?? ''}</p>
+          <p class="muted">목표 금액: ${fmt(p.goalAmount)}원</p>
+          <p class="muted">구조자 부담금: ${fmt(p.rescuerContribution)}원</p>
+          <p class="muted">지지자 수: ${fmt(p.supportersCount)}</p>
+          ${p.registrantKakaoId ? `<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn kakao">카카오톡으로 참여하기</a>` : ''}
+        `;
+
+        // 슬라이더 동작
+        const sliderImgs = $detail.querySelectorAll('.slider img');
+        if(sliderImgs.length){
+          let idx = 0;
+          const prev = document.getElementById('prevBtn');
+          const next = document.getElementById('nextBtn');
+          const show = (i) => sliderImgs.forEach((img,j)=>img.classList.toggle('active', j===i));
+          prev.addEventListener('click', ()=>{ idx = (idx-1+sliderImgs.length)%sliderImgs.length; show(idx); });
+          next.addEventListener('click', ()=>{ idx = (idx+1)%sliderImgs.length; show(idx); });
+        }
       }catch(e){
         console.error(e);
-        $list.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
+        $detail.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
 
-    $q.addEventListener('input', render);
     render();
   </script>
 </body>
