--- a/project_list.html
+++ b/project_list.html
@@ -38,22 +38,24 @@
     const $q = document.getElementById('q');
     const $list = document.getElementById('list');
 
-    // ---- 이미지 URL 보강: 문자열만 고르고, 배열/객체도 처리 ----
+    // ---- 이미지 후보 추출 헬퍼들 (UI 변경 없음) ----
     const pick = (...cands) => cands.find(u => typeof u === 'string' && u.trim());
+
     const firstFromImages = (p) => {
       if (!Array.isArray(p.images) || !p.images.length) return null;
       const v = p.images[0];
       return typeof v === 'string' ? v : (v && v.url) ? v.url : null;
     };
+
     const firstFromGallery = (p) =>
       Array.isArray(p.galleryUrls) && p.galleryUrls.length ? p.galleryUrls[0] : null;
 
-    // gs://bucket/path 또는 'covers/...' 같은 Storage 경로 → https URL로 변환
+    // gs:// 또는 'covers/...' 같은 경로 → 표시 가능한 https URL
     async function toHttpUrl(maybe) {
       if (!maybe) return null;
-      if (/^https?:\/\//i.test(maybe)) return maybe;       // 이미 http(s)
+      if (/^https?:\/\//i.test(maybe)) return maybe;   // 이미 URL
       try {
-        const r = ref(storage, maybe);                      // gs:// 또는 상대 경로 모두 허용
+        const r = ref(storage, maybe);                 // 'covers/...' 또는 'gs://...' 모두 허용
         return await getDownloadURL(r);
       } catch (e) {
         console.warn('getDownloadURL 실패:', maybe, e?.message || e);
@@ -61,7 +63,7 @@
       }
     }
 
-    // 최종 커버 URL 계산 (비동기)
+    // 최종 커버 URL (비동기 변환 포함)
     async function coverUrlOf(p) {
       const candidate = pick(
         p.representativeImageUrl,
@@ -86,7 +88,7 @@
 
     async function render(){
       try{
-        // 목록은 기존 데이터까지 모두 보이도록
+        // 기존 데이터까지 모두 보이도록
         const all = await apiListProjects({ status:'all' });
         const list = all.filter(p => match(p, $q.value.trim()));
 
@@ -95,7 +97,7 @@
           return;
         }
 
-        // 각 항목의 커버 URL을 비동기로 해석
+        // 각 항목 커버 URL 해석
         const withCovers = await Promise.all(list.map(async p => ({
           ...p,
           _cover: await coverUrlOf(p)
